--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_memberships.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_memberships.scss
@@ -796,6 +796,12 @@
         padding: 10px 20px;
         vertical-align: top;
 
+        &.label {
+          color: $gray-darker;
+          font-size: $font-size-base;
+          font-weight: $crm-font-weight-h2;
+        }
+
         label {
           line-height: 30px;
         }
@@ -837,6 +843,44 @@
 
       input[type="checkbox"]:checked + label[for]:after {
         margin-top: -4px;
+      }
+    }
+
+    .CRM_Member_Form_Task_Email {
+      .status {
+        margin: 10px 20px;
+        padding: 10px 25px !important;
+      }
+
+      .crm-form-block .form-layout-compressed {
+        width: 100%;      
+
+        .select2-container-multi {
+          width: 100% !important;
+        }
+      }
+
+      .crm-html_email-accordion  .helpIcon {
+        margin-bottom: 15px;
+      }
+
+      .crm-contactEmail-form-block > .section .section {
+        padding: 0 !important;
+      }
+
+      .crm-accordion-body td {
+        padding-left: 0 !important
+      }
+
+      #saveDetails {
+        .label {
+          display: inline-block;
+          margin-right: 20px;
+        }
+
+        .content {
+          display: inline-block;
+        }
       }
     }
 
