PCHR-2198: Convert request comments to table

--- a/uk.co.compucorp.civicrm.hremails/email-templates/src/assets/scss/components/_request.scss
+++ b/uk.co.compucorp.civicrm.hremails/email-templates/src/assets/scss/components/_request.scss
@@ -15,12 +15,17 @@
 
 
 .request-comment {
-  padding: $callout-padding;
+
+  &-body {
+    padding: $callout-padding;
+    padding-top: 0;
+  }
 
   &-header {
-    @include margin(10px, bottom);
     color: $gray-darker;
     font-weight: 600;
+    padding: $callout-padding;
+    padding-bottom: $callout-padding/2
   }
 }
 
