PCHR-2198: Change the layout of request data list to rows+columns

--- a/uk.co.compucorp.civicrm.hremails/email-templates/src/assets/scss/components/_request.scss
+++ b/uk.co.compucorp.civicrm.hremails/email-templates/src/assets/scss/components/_request.scss
@@ -39,30 +39,34 @@
 
 .request-data {
 
-  dl {
-    @include margin(0);
-  }
+  &-key {
 
-  dt {
-    color: $gray-darker;
-    float: left;
-    font-weight: 600;
-    width: 150px;
-  }
+    span {
+      color: $gray-darker;
+      font-weight: 600;
+    }
 
-  dd {
-    @include margin(0, left);
-
-    &:not(:last-child) {
-      @include margin(10px, bottom);
+    // Mobile only: remove vertical margin between the key and the value
+    @media only screen and (max-width: #{$global-breakpoint}) {
+      padding-bottom: 0 !important;
     }
   }
 
-  @media only screen and (max-width: #{$global-breakpoint}) {
+  .row {
 
-    dt {
-      float: none !important;
-      width: auto !important;
+    // Mobile / Desktop: Remove bottom margin on the last row
+    &:last-child {
+
+      .columns {
+        padding-bottom: 0 !important;
+      }
+    }
+
+    // Desktop only: reduce the vergical margin between rows
+    @media only screen and (min-width: #{$global-breakpoint + 1}) {
+      .columns {
+        padding-bottom: 10px !important;
+      }
     }
   }
 }
