--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/my-leave/components/my-leave-report.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/my-leave/components/my-leave-report.html
@@ -218,7 +218,7 @@
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu-right" uib-dropdown-menu>
                                   <li ng-repeat="action in report.actionsFor(request)">
-                                    <a ng-if="action === 'cancel'" href
+                                    <a ng-if="action === 'cancel' && report.canCancel(request)" href
                                       ng-click="report.action(request, action)">
                                       {{action}}
                                     </a>
@@ -388,7 +388,7 @@
                               </a>
                               <ul class="dropdown-menu dropdown-menu-right" uib-dropdown-menu>
                                 <li ng-repeat="action in report.actionsFor(request)">
-                                  <a ng-if="action === 'cancel'" href
+                                  <a ng-if="action === 'cancel' && report.canCancel(request)" href
                                     ng-click="report.action(request, action)">
                                     {{action}}
                                     </a>
