--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_view-contact.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_view-contact.scss
@@ -67,14 +67,13 @@
     }
   }
 
-  .modal-dialog {
-    td {
-      vertical-align: middle;
-    }
+  .modal-dialog td {
+    vertical-align: middle;
   }
 
   .help {
     font-family: $font-family-base;
+    padding: 10px;
   }
 
   .action-link a.button {
