PCHR-2198: Remove bottom margin from callouts

--- a/uk.co.compucorp.civicrm.hremails/email-templates/src/assets/scss/components/_callout.scss
+++ b/uk.co.compucorp.civicrm.hremails/email-templates/src/assets/scss/components/_callout.scss
@@ -1,3 +1,7 @@
+.callout {
+  @include margin(0, bottom, true);
+}
+
 .callout-header {
   background: $panel-default-heading-bg;
   padding: $panel-heading-padding;
