--- a/uk.co.compucorp.civicrm.hremails/email-templates/src/partials/request-comment.html
+++ b/uk.co.compucorp.civicrm.hremails/email-templates/src/partials/request-comment.html
@@ -7,9 +7,7 @@
       </td>
     </tr>
     <tr>
-      <td class="request-comment-body">
-        {{text}}
-      </td>
+      <td class="request-comment-body">{{text}}</td>
     </tr>
   </tbody>
 </table>
