--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_events.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_events.scss
@@ -375,16 +375,13 @@
     }
   }
 
-  span {
-    &.description {
+  span.description {
       display: block;
       line-height: 1.5em;
       margin-bottom: 5px;
-    }
   }
 
   .cvv2-section {
-
     input,
     .cvv2-section,
     .crm-error {
@@ -406,111 +403,107 @@
     display: none;
   }
 
+  .crm-event-participant-view-form-block {    
+    margin-left: -20px;
+    margin-right: -20px;
+    margin-top: -20px;
+  }
+
+  .description {
+    margin: 10px 20px;
+  }
+
   table {
     background: transparent;
     border: none;
+    box-shadow: none !important;
     font-family: $font-family-base;
     margin: 10px 0;
-    box-shadow: none !important;
 
-    &.crm-info-panel {
-      width: 105%;
-      margin-top: -20px;
-      margin-left: -20px;
-      margin-right: -20px;
+    &.selector {
+      display: block;      
+      overflow-x: auto;
+
+      th, td {
+        white-space: nowrap;
+      }
     }
 
-    thead {
-      tr {
-        border: 1px solid $crm-background !important;
+    thead tr {
+      border: 1px solid $crm-background !important;
 
-        th {
+      th {
+        background: $gray-lighter !important;
+        border: none;
+        border-bottom: none;
+        color: $gray-darker !important;
+        vertical-align: middle;
+
+        div {
+          padding: 0;
+        }
+      }
+    }
+
+    tbody tr {
+      background: $crm-white;
+      border: 1px solid $crm-background;
+      border-left: 0;
+      border-right: 0;
+
+      &.crm-event-participantview-form-block-displayName td {
+        strong {
+          display: inline-block;
+          padding-top: 3px;
+        }
+        
+        div {
+          float: right;
+        }
+      }
+
+      &.crm-child-row td {
+        padding: 0;
+      }
+
+      &.crm-child-row td .crm-ajax-container {
+        table {
+          margin: 0;
+
+          th {                
+            background: $gray-lighter !important;
+            border: none;
+            border-bottom: none;
+            color: $gray-darker;
+            vertical-align: middle;
+          }
+        }
+      }
+
+      td {
+        background: $crm-white !important;
+        border: none;
+        line-height: 1.1em;
+        padding: 20px;
+
+        &.label {
           border-bottom: none;
-          background: $gray-lighter !important;
           color: $gray-darker !important;
           vertical-align: middle;
-          border: none;
-          line-height: 1.1em;
-          height: 42px;
 
           div {
             padding: 0;
           }
         }
-      }
-    }
 
-    tbody {
-      tr {
-        background: $crm-white;
-        border: 1px solid $crm-background;
-        border-left: 0;
-        border-right: 0;
-
-        &.crm-event-participantview-form-block-displayName td {
-          strong {
-            display: inline-block;
-            padding-top: 3px;
-          }
-          
-          div {
-            float: right;
-          }
-        }
-
-        &.crm-child-row {
-          & > td {
-            padding: 0;
-
-            .crm-ajax-container {
-              table {
-                margin: 0;
-
-                tbody {
-                  border-top: 1px solid $crm-dark-grayblue !important
-                }
-
-                th {
-                  border-bottom: none;
-                  background: $gray-lighter !important;
-                  color: $gray-darker;
-                  vertical-align: middle;
-                  border: none;
-                }
-              }
-            }
-          }
-        }
-
-        td {
-          border: none;
-          padding: 20px;
-          line-height: 1.1em;
-          background: $crm-white !important;
-
-          &.label {
-            border-bottom: none;
-            color: $gray-darker !important;
-            vertical-align: middle;
-
-            div {
-              padding: 0;
-            }
-          }
-
-          &:not(.label) {
-            color: $gray-dark;
-          }
-        }
-
-        &:last-child {
-          border-bottom: 0;
-        }
-
-        &:first-child {
-          border-top: 0;
+        &:not(.label) {
+          color: $gray-dark;
         }
       }
+
+      &:first-child {
+        border-top: 0;
+      }      
     }
   }
 
@@ -520,13 +513,13 @@
     }
 
     td:not(.label) {
-      width: 100%;
       padding: 0;
+      width: 100%;
     }
   }
 
   .crm-accordion-header {
-    font-size: 13px !important;
+    font-size: $font-size-base !important;
     font-family: $font-family-base;
 
     + .crm-accordion-body {
@@ -557,10 +550,10 @@
     }
 
     td {
-      vertical-align: middle;
+      box-sizing: border-box;
       display: table-cell;
       min-width: 170px;
-      box-sizing: border-box;
+      vertical-align: middle;
     }
 
     .html-adjust {
