PCHR-1421: Fix isRole function for manager

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/manager-leave/components/manager-leave-container.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/manager-leave/components/manager-leave-container.html
@@ -1,15 +1,15 @@
 <div class="manager-leave-page">
   <div class="button-container">
     <div class="btn-group" uib-dropdown>
-      <button type="button" class="btn btn-primary" leave-request-popup leave-type="leave" for-staff="true"
+      <button type="button" class="btn btn-primary" leave-request-popup leave-type="leave"
         contact-id="managerLeave.contactId">Record New Absence</button>
       <button type="button" class="btn btn-primary dropdown-toggle-split" uib-dropdown-toggle>
         <span class="caret"></span>
       </button>
       <ul class="dropdown-menu" uib-dropdown-menu>
-        <li><a leave-request-popup contact-id="managerLeave.contactId" leave-type="sickness" for-staff="true" href="#">
+        <li><a leave-request-popup contact-id="managerLeave.contactId" leave-type="sickness" href="#">
           Record Sickness</a></li>
-        <li><a leave-request-popup contact-id="managerLeave.contactId" leave-type="toil" for-staff="true" href="#">
+        <li><a leave-request-popup contact-id="managerLeave.contactId" leave-type="toil" href="#">
           Record Overtime</a></li>
       </ul>
     </div>
