--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/request-modal/details/leave.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/request-modal/details/leave.html
@@ -5,13 +5,13 @@
       <div class="col-xs-8">
         <div class="btn-group btn-group-justified">
           <label
-            ng-disabled="$ctrl.isMode('view') || ($ctrl.isRole('manager') && !$ctrl.isLeaveType('sickness'))"
+            ng-disabled="$ctrl.isMode('view') || (!$ctrl.isNewRequest() && !$ctrl.isLeaveType('sickness'))"
             class="btn active"
             ng-model="$ctrl.uiOptions.multipleDays"
             uib-btn-radio="true"
             ng-change="$ctrl.changeInNoOfDays()">Multiple Days</label>
           <label
-            ng-disabled="$ctrl.isMode('view') || ($ctrl.isRole('manager') && !$ctrl.isLeaveType('sickness'))"
+            ng-disabled="$ctrl.isMode('view') || (!$ctrl.isNewRequest() && $ctrl.isRole('manager') && !$ctrl.isLeaveType('sickness'))"
             class="btn"
             ng-model="$ctrl.uiOptions.multipleDays"
             uib-btn-radio="false"
@@ -37,11 +37,11 @@
             ng-model="$ctrl.uiOptions.fromDate"
             is-open="$ctrl.uiOptions.date.from.show"
             ng-readonly="true"
-            ng-disabled="$ctrl.isMode('view') || ($ctrl.isRole('manager') && !$ctrl.isLeaveType('sickness'))"
+            ng-disabled="$ctrl.isMode('view') || ($ctrl.isRole('manager') && !$ctrl.isNewRequest() && !$ctrl.isLeaveType('sickness'))"
             ng-change="$ctrl.updateAbsencePeriodDatesTypes($ctrl.uiOptions.fromDate, 'from')"/>
           <span class="input-group-btn">
             <button
-              ng-disabled="$ctrl.isMode('view') || ($ctrl.isRole('manager') && !$ctrl.isLeaveType('sickness'))"
+              ng-disabled="$ctrl.isMode('view') || ($ctrl.isRole('manager') && !$ctrl.isNewRequest() && !$ctrl.isLeaveType('sickness'))"
               type="button"
               class="btn btn-default fa fa-calendar"
               ng-click="$ctrl.uiOptions.date.from.show = true"></button>
@@ -55,11 +55,13 @@
           <div class="chr_custom-select chr_custom-select--full">
             <select
               name="fromDayTypeSelect"
-              ng-disabled="$ctrl.isMode('view') || $ctrl.requestFromDayTypes.length === 1 || ($ctrl.isRole('manager') && !$ctrl.isLeaveType('sickness'))"
+              ng-disabled="$ctrl.isMode('view') || $ctrl.requestFromDayTypes.length === 1 ||
+                ($ctrl.isRole('manager') && !$ctrl.isNewRequest() && !$ctrl.isLeaveType('sickness'))"
               ng-options="dayType.value as dayType.label for dayType in $ctrl.requestFromDayTypes"
               ng-model="$ctrl.request.from_date_type"
               ng-change="$ctrl.calculateBalanceChange()">
-              <option ng-disabled="$ctrl.isMode('view') || ($ctrl.isRole('manager') && !$ctrl.isLeaveType('sickness'))" value="">Select</option>
+              <option ng-disabled="$ctrl.isMode('view') ||
+                ($ctrl.isRole('manager') && !$ctrl.isNewRequest() && !$ctrl.isLeaveType('sickness'))" value="">Select</option>
               dayType{{dayType}}
             </select>
           </crm-loading>
@@ -84,13 +86,13 @@
             ng-model="$ctrl.uiOptions.toDate"
             is-open="$ctrl.uiOptions.date.to.show"
             ng-readonly="true"
-            ng-disabled="$ctrl.isMode('view') || !$ctrl.request.from_date || ($ctrl.isRole('manager') && !$ctrl.isLeaveType('sickness'))"
+            ng-disabled="$ctrl.isMode('view') || !$ctrl.request.from_date || ($ctrl.isRole('manager') && !$ctrl.isNewRequest() && !$ctrl.isLeaveType('sickness'))"
             ng-change="$ctrl.updateAbsencePeriodDatesTypes($ctrl.uiOptions.toDate, 'to')"/>
           <span class="input-group-btn">
             <button
               type="button"
               class="btn btn-default fa fa-calendar"
-              ng-disabled="$ctrl.isMode('view') || !$ctrl.request.from_date || ($ctrl.isRole('manager') && !$ctrl.isLeaveType('sickness'))"
+              ng-disabled="$ctrl.isMode('view') || !$ctrl.request.from_date || ($ctrl.isRole('manager') && !$ctrl.isNewRequest() && !$ctrl.isLeaveType('sickness'))"
               ng-click="$ctrl.uiOptions.date.to.show = $ctrl.request.from_date ? true : false"></button>
           </span>
         </div>
@@ -102,7 +104,7 @@
           <div class="chr_custom-select chr_custom-select--full">
             <select
               name="toDayTypeSelect"
-              ng-disabled="$ctrl.isMode('view') || $ctrl.requestToDayTypes.length === 1 || !$ctrl.request.from_date || ($ctrl.isRole('manager') && !$ctrl.isLeaveType('sickness'))"
+              ng-disabled="$ctrl.isMode('view') || $ctrl.requestToDayTypes.length === 1 || !$ctrl.request.from_date || ($ctrl.isRole('manager') && !$ctrl.isNewRequest() && !$ctrl.isLeaveType('sickness'))"
               ng-options="dayType.value as dayType.label for dayType in $ctrl.requestToDayTypes"
               ng-model="$ctrl.request.to_date_type"
               ng-change="$ctrl.calculateBalanceChange()">
