--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/_detail.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/_detail.scss
@@ -157,52 +157,50 @@
           border-bottom: 1px solid $crm-dark-grayblue;
           border-top-left-radius: $border-radius-base;
           border-top-right-radius: $border-radius-base;
+        }
+          
+        tr:first-child  th {
+          padding: 15px 20px !important;
+          white-space: nowrap;
 
-          th {
-            padding: 10px 20px !important;
+          &:first-child {
+            border-top-left-radius: $border-radius-base;
+          }
 
-            &:first-child {
-              border-top-left-radius: $border-radius-base;
-            }
-
-            &:last-child {
-              border-top-right-radius: $border-radius-base;
-            }
+          &:last-child {
+            border-top-right-radius: $border-radius-base;
           }
         }
       }
 
-      tbody tr {
-        &:last-child {
-          border-bottom-left-radius: $border-radius-base;
-          border-bottom-right-radius: $border-radius-base;
+      tbody tr:last-child {
+        border-bottom-left-radius: $border-radius-base;
+        border-bottom-right-radius: $border-radius-base;
 
-          td {
-            &:first-child {
-              border-bottom-left-radius: $border-radius-base;
-            }
+        td {
+          &:first-child {
+            border-bottom-left-radius: $border-radius-base;
+          }
 
-            &:last-child {
-              border-bottom-right-radius: $border-radius-base;
-            }
+          &:last-child {
+            border-bottom-right-radius: $border-radius-base;
           }
         }
       }
 
       .crm-expand-row {
-        position: relative;
         background: none;
+        position: relative;        
 
         &:after {
-          @include fa-icon(13px, '\f054');
-          position: absolute;
+          @include fa-icon($font-size-base, $fa-var-chevron-right);
           left: 0;
+          position: absolute;
+          
         }
 
-        &.expanded {
-          &:after {
-            @include fa-icon(13px, '\f078');
-          }
+        &.expanded:after {
+          @include fa-icon($font-size-base, $fa-var-chevron-down);
         }
       }
 
@@ -883,36 +881,39 @@ input[type="text"] {
     padding-left: 23px;
   }
 
-  #softCredit {
-    > .crm-accordion-body {
-      &,
-      tr,
+  #softCredit > .crm-accordion-body {
+    &,
+    tr,
+    td {
+      padding-left: 0;
+    }
+
+    .crm-contribution-form-block-soft_credit_to:not(.hiddenElement) {
+      display: flex !important;
+      flex-direction: column;
+
       td {
-        padding-left: 0;
-      }
+        flex: 1 auto;
+        vertical-align: top;
 
-      .crm-contribution-form-block-soft_credit_to:not(.hiddenElement) {
-        display: flex !important;
-        flex-direction: column;
+        .select2-container {
+          margin-right: 0 !important;
+        }
 
-        td {
-          flex: 1 auto;
+        .soft-credit-delete-link {
+          width: 10px;
         }
       }
-
-      label {
-        width: 205px;
-        display: inline-block;
-      }
     }
+
+    label {
+      display: inline-block;
+      width: 200px;
+    }    
   }
 
-  #customData {
-    .label {
-      label {
-        line-height: normal;
-      }
-    }
+  #customData .label label {
+    line-height: normal;
   }
 
   input[type=radio] + label[for] {
@@ -923,13 +924,11 @@ input[type="text"] {
     }
   }
 
-  .Premium {
-    td {
-      display: table-cell;
+  .Premium td {
+    display: table-cell;
 
-      &:first-child {
-        width: 173px;
-      }
+    &:first-child {
+      width: 173px;
     }
   }
 
