PCHR-1421: Role set from directive

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/manager-leave/components/manager-leave-requests.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/manager-leave/components/manager-leave-requests.html
@@ -125,7 +125,7 @@
                       </a>
                       <a ng-if="action !== 'cancel'" href
                         leave-request-popup leave-request="request"
-                        contact-id="ctrl.contactId">
+                        contact-id="ctrl.contactId" user-role="{{$root.role}}">
                         {{action}}
                       </a>
                     </li>
