--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/manager-leave/components/manager-leave-calendar-month.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/manager-leave/components/manager-leave-calendar-month.html
@@ -41,6 +41,7 @@
             <span ng-if="day.UI.isPM">PM</span>
             <span ng-if="day.UI.isAccruedTOIL">AT</span>
             <a ng-if="day.leaveRequest"
+               user-role="{{$root.role}}"
                contact-id="calendar.contactId"
                leave-request-popup
                leave-request="day.leaveRequest"
