--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/directives/leave-request-popup.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/directives/leave-request-popup.html
@@ -11,7 +11,7 @@
 </div>
 <crm-loading show="!$ctrl.loading.absenceTypes">
   <div
-    ng-show="$ctrl.isRole('manager') && !$ctrl.isNewRequest()"
+    ng-show="$ctrl.isRole('manager') && !$ctrl.isMode('create')"
     class="row chr_leave-request-modal__user-info">
     <span class="col-xs-6">{{$ctrl.contactName}}</span>
     <span class="col-xs-6">{{::$ctrl.statusBeforeEdit.label}}</span>
@@ -40,7 +40,7 @@
         <div class="col-xs-12">
           <div class="chr_custom-select chr_custom-select--full">
             <select
-              ng-disabled="$ctrl.isMode('view') || ($ctrl.isRole('manager') && !$ctrl.isNewRequest())"
+              ng-disabled="$ctrl.isMode('view') || ($ctrl.isRole('manager') && !$ctrl.isMode('create'))"
               name="absenceTypeSelect"
               ng-options="absenceType.id as absenceType.title for absenceType in $ctrl.absenceTypes"
               ng-model="$ctrl.request.type_id"
