PCHR-2199: Do not escape params of attachment and data partials

--- a/uk.co.compucorp.civicrm.hremails/email-templates/src/partials/request-data.html
+++ b/uk.co.compucorp.civicrm.hremails/email-templates/src/partials/request-data.html
@@ -5,6 +5,6 @@
     </{{#if keyTag}}{{keyTag}}{{else}}span{{/if}}>
   </columns>
   <columns class="request-data-value">
-    <span>{{value}}</span>
+    <span>{{{value}}}</span>
   </columns>
 </row>
