--- a/uk.co.compucorp.civicrm.hremails/email-templates/src/partials/request-attachment.html
+++ b/uk.co.compucorp.civicrm.hremails/email-templates/src/partials/request-attachment.html
@@ -1,3 +1,3 @@
 <div class="request-attachment">
-  <span class="request-attachment-name">{{name}}</span>: Added on {{uploadDate}}
+  <span class="request-attachment-name">{{{name}}}</span>: Added on {{uploadDate}}
 </div>
