PCHR-1421: PR Feedback

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/manager-leave/components/manager-leave-container.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/manager-leave/components/manager-leave-container.html
@@ -8,19 +8,17 @@
       </button>
       <ul class="dropdown-menu" uib-dropdown-menu>
         <li>
-          <a leave-request-popup
-             user-role="{{$root.role}}"
-             contact-id="managerLeave.contactId"
-             leave-type="sickness"
-             href="#">Record Sickness
+          <a
+            leave-request-popup user-role="{{$root.role}}"
+            contact-id="managerLeave.contactId" leave-type="sickness"
+            href="#">Record Sickness
           </a>
         </li>
         <li>
-          <a leave-request-popup
-             user-role="{{$root.role}}"
-             contact-id="managerLeave.contactId"
-             leave-type="toil"
-             href="#">Record Overtime
+          <a
+            leave-request-popup user-role="{{$root.role}}"
+            contact-id="managerLeave.contactId" leave-type="toil"
+            href="#">Record Overtime
           </a>
         </li>
       </ul>
