--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/request-modal/details/leave.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/request-modal/details/leave.html
@@ -5,7 +5,7 @@
       <div class="col-xs-8">
         <div class="btn-group btn-group-justified">
           <label
-            ng-disabled="$ctrl.isMode('view') || (!$ctrl.isMode('create') && !$ctrl.isLeaveType('sickness'))"
+            ng-disabled="$ctrl.isMode('view') || (!$ctrl.isMode('create') && $ctrl.isRole('manager') && !$ctrl.isLeaveType('sickness'))"
             class="btn active"
             ng-model="$ctrl.uiOptions.multipleDays"
             uib-btn-radio="true"
